--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	</div>
 	<div id="loadtext"></div>
     <div id="container"></div>
-	<div id="info">MARS-DOE Solar System</div>
+	<div id="info">Mozfest Solar System</div>
 
 	</body>
 </html>
