--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -132,7 +131,7 @@
 	</div>
 	<div id="loadtext"></div>
     <div id="container"></div>
-	<div id="info">MARS-DOE Solar System</div>
+	<div id="info">Mozfest Solar System</div>
 
 	</body>
 </html>
